Serverside countdown timer implementation for file delete

--- a/faq.html
+++ b/faq.html
@@ -348,6 +348,7 @@
       </script>
     </section>
     <!-- //footer -->
+    <div id="timer" class="time text-center"></div>
   </footer>
 
   <!-- jQuery JS -->
@@ -491,6 +492,10 @@
       }
     })
   </script>
+    <script src="script/script.js"></script>
+    <script>
+        $('#timer').load('script/script.html');
+    </script>
 </body>
 
 </html>
