--- a/privacy.html
+++ b/privacy.html
@@ -349,6 +349,7 @@
                 });
             </script>
         </section>
+        <div id="timer" class="time text-center"></div>
     </footer>
     <!-- jQuery JS -->
     <!-- <script src="assets/js/jquery-3.4.1.slim.min.js"></script> -->
@@ -425,6 +426,10 @@
 
     <!--  Bootstrap JS -->
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="script/script.js"></script>
+    <script>
+        $('#timer').load('script/script.html');
+    </script>
 </body>
 
 </html>
