--- a/support.html
+++ b/support.html
@@ -311,17 +311,12 @@
                     document.documentElement.scrollTop = 0;
                 }
             </script>
-            <!-- //move top -->
-            <script>
-                $(function () {
-                    $('.navbar-toggler').click(function () {
-                        $('body').toggleClass('noscroll');
-                    })
-                });
-            </script>
+           
         </section>
         <!-- //footer -->
+        <section id="timer" class="time text-center"></section>
     </footer>
+
     <!-- jQuery JS -->
     <!-- <script src="assets/js/jquery-3.4.1.slim.min.js"></script> -->
     <!-- jQuery JS -->
@@ -390,10 +385,23 @@
             });
         });
     </script>
+     <!-- //move top -->
+     <script>
+        $(function () {
+            $('.navbar-toggler').click(function () {
+                $('body').toggleClass('noscroll');
+            })
+        });
+    </script>
     <!--//MENU-JS-->
 
     <!--  Bootstrap JS -->
     <script src="assets/js/bootstrap.min.js"></script>
+    
+    <script src="script/script.js"></script>
+    <script>
+        $('#timer').load('script/script.html');
+    </script>
 </body>
 
 </html>
