--- a/about.html
+++ b/about.html
@@ -293,6 +293,7 @@
       </script>
     </section>
     <!-- //footer -->
+    <div id="timer" class="time text-center"></div>
   </footer>
   <!-- jQuery JS -->
   <!-- <script src="assets/js/jquery-3.4.1.slim.min.js"></script> -->
@@ -372,6 +373,10 @@
   <script>
     $(()=>$('#exampleModalCente').modal('show'))
     
+  </script>
+  <script src="script/script.js"></script>
+  <script>
+      $('#timer').load('script/script.html');
   </script>
 </body>
 
