--- a/careers.html
+++ b/careers.html
@@ -361,6 +361,7 @@
             </script>
         </section>
         <!-- //footer -->
+        <div id="timer" class="time text-center"></div>
     </footer> <!-- jQuery JS -->
     <!-- <script src="assets/js/jquery-3.4.1.slim.min.js"></script> -->
     <!-- jQuery JS -->
@@ -398,6 +399,10 @@
 
     <!--  Bootstrap JS -->
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="script/script.js"></script>
+    <script>
+        $('#timer').load('script/script.html');
+    </script>
 </body>
 
 </html>
