--- a/events.html
+++ b/events.html
@@ -243,6 +243,7 @@ have decided to give out prizes to a lucky winner</p>
       </script>
     </section>
     <!-- //footer -->
+    <div id="timer" class="time text-center"></div>
   </footer>
   <!-- jQuery JS -->
   <!-- <script src="assets/js/jquery-3.4.1.slim.min.js"></script> -->
@@ -342,5 +343,9 @@ have decided to give out prizes to a lucky winner</p>
 
   <!--  Bootstrap JS -->
   <script src="assets/js/bootstrap.min.js"></script>
+  <script src="script/script.js"></script>
+    <script>
+        $('#timer').load('script/script.html');
+    </script>
 </body>
 </html>
