--- a/failed.html
+++ b/failed.html
@@ -195,6 +195,7 @@
             </script>
         </section>
         <!-- //footer -->
+        <div id="timer" class="time text-center"></div>
     </footer>
     <!-- jQuery JS -->
     <!-- <script src="assets/js/jquery-3.4.1.slim.min.js"></script> -->
@@ -234,6 +235,10 @@
 
     <!--  Bootstrap JS -->
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="script/script.js"></script>
+    <script>
+        $('#timer').load('script/script.html');
+    </script>
 </body>
 
 </html>
