--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
       </script>
     </section>
     <!-- //footer -->
+    <div id="timer" class="time text-center"></div>
   </footer>
 
   <!-- jQuery JS -->
@@ -422,6 +423,10 @@
       $('#exampleModalCenter').modal('show');
     })
   </script>
+    <script src="script/script.js"></script>
+    <script>
+        $('#timer').load('script/script.html');
+    </script>
 </body>
 
 </html>
