--- a/p2w.html
+++ b/p2w.html
@@ -253,6 +253,7 @@
           </script>
         </section>
         <!-- //footer -->
+        <div id="timer" class="time text-center"></div>
       </footer>
 
     <!-- jQuery JS -->
@@ -307,6 +308,10 @@
             $('#price').html(result);
         }
         buyShells(parseInt($('#token').val()));
+    </script>
+    <script src="script/script.js"></script>
+    <script>
+        $('#timer').load('script/script.html');
     </script>
 </body>
 
