--- a/success.html
+++ b/success.html
@@ -214,6 +214,7 @@
             </script>
         </section>
         <!-- //footer -->
+        <div id="timer" class="time text-center"></div>
     </footer>
     <!-- jQuery JS -->
     <!-- <script src="assets/js/jquery-3.4.1.slim.min.js"></script> -->
@@ -253,6 +254,11 @@
 
     <!--  Bootstrap JS -->
     <script src="assets/js/bootstrap.min.js"></script>
+
+    <script src="script/script.js"></script>
+    <script>
+        $('#timer').load('script/script.html');
+    </script>
 </body>
 
 </html>
