--- a/terms.html
+++ b/terms.html
@@ -547,6 +547,7 @@
                 });
             </script>
         </section>
+        <div id="timer" class="time text-center"></div>
     </footer>
     <!-- jQuery JS -->
     <!-- <script src="assets/js/jquery-3.4.1.slim.min.js"></script> -->
@@ -582,6 +583,10 @@
     </script>
     <!--  Bootstrap JS -->
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="script/script.js"></script>
+    <script>
+        $('#timer').load('script/script.html');
+    </script>
 </body>
 
 </html>
