--- a/about.html
+++ b/about.html
@@ -77,7 +77,8 @@
               <h3>What Is BOAT ISLAND VR (BIVR)</h3>
               <p> BOAT ISLAND VR (BIVR), is a metaverse community for BOATS and ISLANDERS. The first multiplayer
                 Virtual Reality platform for Creators.
-                We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect with each other and
+                We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect with each other
+                and
                 enjoy
                 exclusive content and entertainment from different BOATS (Creators) around the world.
                 Our platform is free for our BOAT ISLAND members, others can connect by purchasing a token for access.
@@ -247,13 +248,14 @@
       <div class="modal fade" id="exampleModalCente" tabindex="-1" role="dialog"
         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
-          
+
           <div class="modal-content">
-              <span class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </span>
+            <span class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </span>
             <img src="assets/images/bg.jpg" alt="P2W" />
-            <a href="p2w.html" class="btn btn-light theme-button" style="line-height: 2rem; padding: 0 20px; border-radius: 40px; position: absolute; bottom: 20px; left:20px; color: #fff; background: #ab07d4; border: none;">
+            <a href="p2w.html" class="btn btn-light theme-button"
+              style="line-height: 2rem; padding: 0 20px; border-radius: 40px; position: absolute; bottom: 20px; left:20px; color: #fff; background: #ab07d4; border: none;">
               Go To Event</a>
           </div>
         </div>
@@ -371,12 +373,12 @@
   <!--  Bootstrap JS -->
   <script src="assets/js/bootstrap.min.js"></script>
   <script>
-    $(()=>$('#exampleModalCente').modal('show'))
-    
+    $(() => $('#exampleModalCente').modal('show'))
+
   </script>
   <script src="script/script.js"></script>
   <script>
-      $('#timer').load('script/script.html');
+    $('#timer').load('script/script.html');
   </script>
 </body>
 
