--- a/careers.html
+++ b/careers.html
@@ -36,7 +36,8 @@
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="https://bivr.io">Home <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="https://bivr.io">Home <span
+                                        class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item @@about-active">
                                 <a class="nav-link" href="about.html">About</a>
@@ -285,14 +286,15 @@
                         <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
                             <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
                                     style="height:25px" />
-                                <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt=""/>
+                                <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt="" />
                             </h3>
 
                             <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
                                 BOATS and
                                 ISLANDERS. The first multiplayer
                                 Virtual Reality platform for Creators.
-                                We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect with
+                                We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect
+                                with
                                 each other and
                                 enjoy
                                 exclusive content and entertainment from different BOATS (Creators) around the world.
@@ -311,15 +313,20 @@
                     </div>
                     <div class="columns-2 mt-lg-0 mt-3">
                         <ul class="social">
-                            <li><a href="https://www.facebook.com/BoatIsland" target="_blank"><span class="fa fa-facebook" aria-hidden="true"></span></a>
+                            <li><a href="https://www.facebook.com/BoatIsland" target="_blank"><span
+                                        class="fa fa-facebook" aria-hidden="true"></span></a>
                             </li>
-                            <li><a href="https://instagram.com/boatislandvr?igshid=YmMyMTA2M2Y=" target="_blank"><span class="fa fa-instagram" aria-hidden="true"></span></a>
+                            <li><a href="https://instagram.com/boatislandvr?igshid=YmMyMTA2M2Y=" target="_blank"><span
+                                        class="fa fa-instagram" aria-hidden="true"></span></a>
                             </li>
-                            <li><a href="https://twitter.com/BoatIslandVr?t=4gl6FXBUVNQ5PS9kBvTP7w&s=09" target="_blank"><span class="fa fa-twitter" aria-hidden="true"></span></a>
+                            <li><a href="https://twitter.com/BoatIslandVr?t=4gl6FXBUVNQ5PS9kBvTP7w&s=09"
+                                    target="_blank"><span class="fa fa-twitter" aria-hidden="true"></span></a>
                             </li>
-                            <li><a href="https://youtu.be/yRh7N-CluiM" target="_blank"><span class="fa fa-youtube" aria-hidden="true"></span></a>
+                            <li><a href="https://youtu.be/yRh7N-CluiM" target="_blank"><span class="fa fa-youtube"
+                                        aria-hidden="true"></span></a>
                             </li>
-                            <li><a href="https://www.linkedin.com/company/boatisland/" target="_blank"><span class="fa fa-linkedin" aria-hidden="true"></span></a></li>
+                            <li><a href="https://www.linkedin.com/company/boatisland/" target="_blank"><span
+                                        class="fa fa-linkedin" aria-hidden="true"></span></a></li>
                         </ul>
                     </div>
                 </div>
