--- a/failed.html
+++ b/failed.html
@@ -64,7 +64,8 @@
     <!-- contact breadcrumbs -->
     <nav id="breadcrumbs" class="breadcrumbs">
         <div class="container page-wrapper">
-            <a href="https://bivr.io">Home</a> » <a href="events.html" class="breadcrumb_last" aria-current="page">Events</a>
+            <a href="https://bivr.io">Home</a> » <a href="events.html" class="breadcrumb_last"
+                aria-current="page">Events</a>
         </div>
     </nav>
     <!-- /contact breadcrumbs -->
@@ -122,7 +123,8 @@
                                 BOATS and
                                 ISLANDERS. The first multiplayer
                                 Virtual Reality platform for Creators.
-                                We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect with
+                                We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect
+                                with
                                 each other and
                                 enjoy
                                 exclusive content and entertainment from different BOATS (Creators) around the world.
@@ -229,7 +231,6 @@
             });
         });
     </script>
-
 
     <!--//MENU-JS-->
 
