--- a/privacy.html
+++ b/privacy.html
@@ -64,7 +64,8 @@
     <!-- contact breadcrumbs -->
     <nav id="breadcrumbs" class="breadcrumbs">
         <div class="container page-wrapper">
-            <a href="https://bivr.io">Home</a> » <a href="#privacy" class="breadcrumb_last" aria-current="page">Privacy Policy </a> » <span class="breadcrumb_last" aria-current="page">Security
+            <a href="https://bivr.io">Home</a> » <a href="#privacy" class="breadcrumb_last" aria-current="page">Privacy
+                Policy </a> » <span class="breadcrumb_last" aria-current="page">Security
                 Compliance Agreement</span>
         </div>
     </nav>
@@ -270,14 +271,15 @@
                         <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
                             <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
                                     style="height:25px" />
-                                <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt=""/>
+                                <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt="" />
                             </h3>
 
                             <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
                                 BOATS and
                                 ISLANDERS. The first multiplayer
                                 Virtual Reality platform for Creators.
-                                We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect with
+                                We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect
+                                with
                                 each other and
                                 enjoy
                                 exclusive content and entertainment from different BOATS (Creators) around the world.
