--- a/success.html
+++ b/success.html
@@ -84,13 +84,14 @@
                 <!-- <img src="assets/images/s8.png" alt="resiser" class="img-fluid"> -->
                 <h4 class="py-2">Your Payment Receipt has been sent to your email</h4>
                 <p>
-                    <h4 class="text-info">NOTE:
-                    <emp>Your payment reference from Paystack (BIVRxxxx) remains as your proof of payment and will be used as your Token ID to enter the BIVR Raffle challenge. 
+                <h4 class="text-info">NOTE:
+                    <emp>Your payment reference from Paystack (BIVRxxxx) remains as your proof of payment and will be
+                        used as your Token ID to enter the BIVR Raffle challenge.
                         Keep details private.</emp>
                 </h4>
                 </p>
                 <p class="py-2">If you have any questions or concerns, please do not hesitate to contact us.</p>
-                
+
             </div>
             <div class="container py-2 text-center">
 
@@ -134,14 +135,15 @@
                         <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
                             <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
                                     style="height:25px" />
-                                <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt=""/>
+                                <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt="" />
                             </h3>
 
                             <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
                                 BOATS and
                                 ISLANDERS. The first multiplayer
                                 Virtual Reality platform for Creators.
-                                We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect with
+                                We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect
+                                with
                                 each other and
                                 enjoy
                                 exclusive content and entertainment from different BOATS (Creators) around the world.
