--- a/events.html
+++ b/events.html
@@ -81,8 +81,7 @@
         <div class="row mt-5">
           <div class="col-lg-10 mx-auto">
             <div class="resp-tabs-container hor_1">
-              <h3 
-                style="color: var(--primary);
+              <h3 style="color: var(--primary);
                 font-weight: 700;
                 line-height: 53.59px;">Ongoing Events</h3>
               <div class="products-content">
@@ -93,15 +92,15 @@
                   <div class="col-md-8 mt-md-0 mt-5">
                     <h3>Play To Win (P2W)</h3>
                     <p>
-                      Play to win in the metaverse for 1 Million Naira and a VR OCULUS QUEST 2 HEADSET. We are celebrating our launch and
-have decided to give out prizes to a lucky winner</p>
+                      Play to win in the metaverse for 1 Million Naira and a VR OCULUS QUEST 2 HEADSET. We are
+                      celebrating our launch and
+                      have decided to give out prizes to a lucky winner</p>
                     <a href="p2w.html" class="btn btn-outline-primary theme-button mt-3">Go to Event</a>
                   </div>
                 </div>
               </div>
               <hr>
-              <h3 
-                style="color: var(--primary);
+              <h3 style="color: var(--primary);
                 font-weight: 700;
                 line-height: 53.59px;">Upcoming Events</h3>
               <div class="products-content">
@@ -120,7 +119,7 @@ have decided to give out prizes to a lucky winner</p>
             </div>
           </div>
         </div>
-        </div>
+      </div>
     </section>
   </main>
   <footer>
@@ -129,73 +128,78 @@ have decided to give out prizes to a lucky winner</p>
 
       <div class="w3l-footer-16-main py-5" style="background-color: #242464 !important">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-6 column">
-                    <div class="row">
-                        <div class="col-md-6 column">
-                            <h3>Quick Links</h3>
-                            <ul class="footer-gd-16">
-                                <li><a href="https://bivr.io">Home</a></li>
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="events.html">Events</a></li>
-                                <li><a href="career.html">Careers</a></li>
-                                <li><a href="support.html">How to Play</a></li>
-                                <li><a href="register.html">Download</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-6 column mt-md-0 mt-4">
-                            <h3>Legal Information</h3>
-                            <ul class="footer-gd-16">
-                                <li><a href="terms.html">Terms of Use</a></li>
-                                <li><a href="privacy.html#privacy">Privacy Policy</a></li>
-                                <li><a href="privacy.html">Security Agreement</a></li>
-                            </ul>
-                        </div>
-                    </div>
+          <div class="row">
+            <div class="col-lg-6 column">
+              <div class="row">
+                <div class="col-md-6 column">
+                  <h3>Quick Links</h3>
+                  <ul class="footer-gd-16">
+                    <li><a href="https://bivr.io">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="events.html">Events</a></li>
+                    <li><a href="career.html">Careers</a></li>
+                    <li><a href="support.html">How to Play</a></li>
+                    <li><a href="register.html">Download</a></li>
+                  </ul>
                 </div>
-                <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
-                    <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
-                            style="height:25px" />
-                        <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt=""/>
-                    </h3>
-
-                    <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
-                        BOATS and
-                        ISLANDERS. The first multiplayer
-                        Virtual Reality platform for Creators.
-                        We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect with
-                        each other and
-                        enjoy
-                        exclusive content and entertainment from different BOATS (Creators) around the world.
-                        Our platform is free for our BOAT ISLAND members, others can connect by purchasing a
-                        token for access.
-                    </p>
+                <div class="col-md-6 column mt-md-0 mt-4">
+                  <h3>Legal Information</h3>
+                  <ul class="footer-gd-16">
+                    <li><a href="terms.html">Terms of Use</a></li>
+                    <li><a href="privacy.html#privacy">Privacy Policy</a></li>
+                    <li><a href="privacy.html">Security Agreement</a></li>
+                  </ul>
                 </div>
+              </div>
             </div>
+            <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
+              <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
+                  style="height:25px" />
+                <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt="" />
+              </h3>
+
+              <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
+                BOATS and
+                ISLANDERS. The first multiplayer
+                Virtual Reality platform for Creators.
+                We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect with
+                each other and
+                enjoy
+                exclusive content and entertainment from different BOATS (Creators) around the world.
+                Our platform is free for our BOAT ISLAND members, others can connect by purchasing a
+                token for access.
+              </p>
+            </div>
+          </div>
         </div>
         <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
-            <div class="columns text-lg-left text-center">
-                <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The BOAT ISLAND. All
-                    rights
-                    reserved
-                </p>
-            </div>
-            <div class="columns-2 mt-lg-0 mt-3">
-                <ul class="social">
-                    <li><a href="https://www.facebook.com/BoatIsland" target="_blank"><span class="fa fa-facebook" aria-hidden="true"></span></a>
-                    </li>
-                    <li><a href="https://instagram.com/boatislandvr?igshid=YmMyMTA2M2Y=" target="_blank"><span class="fa fa-instagram" aria-hidden="true"></span></a>
-                    </li>
-                    <li><a href="https://twitter.com/BoatIslandVr?t=4gl6FXBUVNQ5PS9kBvTP7w&s=09" target="_blank"><span class="fa fa-twitter" aria-hidden="true"></span></a>
-                    </li>
-                    <li><a href="https://youtu.be/yRh7N-CluiM" target="_blank"><span class="fa fa-youtube" aria-hidden="true"></span></a>
-                    </li>
-                    <li><a href="https://www.linkedin.com/company/boatisland/" target="_blank"><span class="fa fa-linkedin" aria-hidden="true"></span></a></li>
-                </ul>
-            </div>
+          <div class="columns text-lg-left text-center">
+            <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The BOAT ISLAND. All
+              rights
+              reserved
+            </p>
+          </div>
+          <div class="columns-2 mt-lg-0 mt-3">
+            <ul class="social">
+              <li><a href="https://www.facebook.com/BoatIsland" target="_blank"><span class="fa fa-facebook"
+                    aria-hidden="true"></span></a>
+              </li>
+              <li><a href="https://instagram.com/boatislandvr?igshid=YmMyMTA2M2Y=" target="_blank"><span
+                    class="fa fa-instagram" aria-hidden="true"></span></a>
+              </li>
+              <li><a href="https://twitter.com/BoatIslandVr?t=4gl6FXBUVNQ5PS9kBvTP7w&s=09" target="_blank"><span
+                    class="fa fa-twitter" aria-hidden="true"></span></a>
+              </li>
+              <li><a href="https://youtu.be/yRh7N-CluiM" target="_blank"><span class="fa fa-youtube"
+                    aria-hidden="true"></span></a>
+              </li>
+              <li><a href="https://www.linkedin.com/company/boatisland/" target="_blank"><span class="fa fa-linkedin"
+                    aria-hidden="true"></span></a></li>
+            </ul>
+          </div>
         </div>
-    </div>
-        </div>
+      </div>
+      </div>
       </div>
       </div>
       <!-- Modal -->
@@ -204,7 +208,8 @@ have decided to give out prizes to a lucky winner</p>
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <img src="assets/images/bg.jpg" alt="P2W" />
-            <a href="p2w.html" class="btn btn-light theme-button" style="line-height: 2rem; padding: 0 20px; border-radius: 40px; position: absolute; bottom: 20px; left:20px; color: #fff; background: #ab07d4; border: none;">
+            <a href="p2w.html" class="btn btn-light theme-button"
+              style="line-height: 2rem; padding: 0 20px; border-radius: 40px; position: absolute; bottom: 20px; left:20px; color: #fff; background: #ab07d4; border: none;">
               Go To Event</a>
           </div>
         </div>
@@ -344,8 +349,9 @@ have decided to give out prizes to a lucky winner</p>
   <!--  Bootstrap JS -->
   <script src="assets/js/bootstrap.min.js"></script>
   <script src="script/script.js"></script>
-    <script>
-        $('#timer').load('script/script.html');
-    </script>
+  <script>
+    $('#timer').load('script/script.html');
+  </script>
 </body>
+
 </html>
