--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
         <img src="assets/images/gl12.png" class="img-fluid" alt="">
         <p class="my-3"> BOAT ISLAND VR (BIVR), is a metaverse community for BOATS and ISLANDERS. The first multiplayer
           Virtual Reality platform for Creators.
-          We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect with each other and enjoy
+          We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect with each other and
+          enjoy
           exclusive content and entertainment from different BOATS (Creators) around the world.
           Our platform is free for our BOAT ISLAND members, others can connect by purchasing a token for access. </p>
       </div>
@@ -185,86 +186,92 @@
 
       <div class="w3l-footer-16-main py-5" style="background-color: #242464 !important">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-6 column">
-                    <div class="row">
-                        <div class="col-md-6 column">
-                            <h3>Quick Links</h3>
-                            <ul class="footer-gd-16">
-                                <li><a href="https://bivr.io">Home</a></li>
-                                <li><a href="about.html">About Us</a></li>
-                                <li><a href="events.html">Events</a></li>
-                                <li><a href="career.html">Careers</a></li>
-                                <li><a href="support.html">How to Play</a></li>
-                                <li><a href="register.html">Download</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-md-6 column mt-md-0 mt-4">
-                            <h3>Legal Information</h3>
-                            <ul class="footer-gd-16">
-                                <li><a href="terms.html">Terms of Use</a></li>
-                                <li><a href="privacy.html#privacy">Privacy Policy</a></li>
-                                <li><a href="privacy.html">Security Agreement</a></li>
-                            </ul>
-                        </div>
-                    </div>
+          <div class="row">
+            <div class="col-lg-6 column">
+              <div class="row">
+                <div class="col-md-6 column">
+                  <h3>Quick Links</h3>
+                  <ul class="footer-gd-16">
+                    <li><a href="https://bivr.io">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="events.html">Events</a></li>
+                    <li><a href="career.html">Careers</a></li>
+                    <li><a href="support.html">How to Play</a></li>
+                    <li><a href="register.html">Download</a></li>
+                  </ul>
                 </div>
-                <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
-                    <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
-                            style="height:25px" />
-                        <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt="" />
-                    </h3>
-
-                    <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
-                        BOATS and
-                        ISLANDERS. The first multiplayer
-                        Virtual Reality platform for Creators.
-                        We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect with
-                        each other and
-                        enjoy
-                        exclusive content and entertainment from different BOATS (Creators) around the world.
-                        Our platform is free for our BOAT ISLAND members, others can connect by purchasing a
-                        token for access.
-                    </p>
+                <div class="col-md-6 column mt-md-0 mt-4">
+                  <h3>Legal Information</h3>
+                  <ul class="footer-gd-16">
+                    <li><a href="terms.html">Terms of Use</a></li>
+                    <li><a href="privacy.html#privacy">Privacy Policy</a></li>
+                    <li><a href="privacy.html">Security Agreement</a></li>
+                  </ul>
                 </div>
+              </div>
             </div>
+            <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
+              <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
+                  style="height:25px" />
+                <img class="img-fluid logo-text" src="assets/images/logo-txt.png" alt="" />
+              </h3>
+
+              <p style="color: #ffffff !important"> BOAT ISLAND VR (BIVR), is a metaverse community for
+                BOATS and
+                ISLANDERS. The first multiplayer
+                Virtual Reality platform for Creators.
+                We are building a metaverse and virtual space where ISLANDERS (Fans) can visit, connect with
+                each other and
+                enjoy
+                exclusive content and entertainment from different BOATS (Creators) around the world.
+                Our platform is free for our BOAT ISLAND members, others can connect by purchasing a
+                token for access.
+              </p>
+            </div>
+          </div>
         </div>
         <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
-            <div class="columns text-lg-left text-center">
-                <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The BOAT ISLAND. All
-                    rights
-                    reserved
-                </p>
-            </div>
-            <div class="columns-2 mt-lg-0 mt-3">
-                <ul class="social">
-                    <li><a href="https://www.facebook.com/BoatIsland" target="_blank"><span class="fa fa-facebook" aria-hidden="true"></span></a>
-                    </li>
-                    <li><a href="https://instagram.com/boatislandvr?igshid=YmMyMTA2M2Y=" target="_blank"><span class="fa fa-instagram" aria-hidden="true"></span></a>
-                    </li>
-                    <li><a href="https://twitter.com/BoatIslandVr?t=4gl6FXBUVNQ5PS9kBvTP7w&s=09" target="_blank"><span class="fa fa-twitter" aria-hidden="true"></span></a>
-                    </li>
-                    <li><a href="https://youtu.be/yRh7N-CluiM" target="_blank"><span class="fa fa-youtube" aria-hidden="true"></span></a>
-                    </li>
-                    <li><a href="https://www.linkedin.com/company/boatisland/" target="_blank"><span class="fa fa-linkedin" aria-hidden="true"></span></a></li>
-                </ul>
-            </div>
+          <div class="columns text-lg-left text-center">
+            <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The BOAT ISLAND. All
+              rights
+              reserved
+            </p>
+          </div>
+          <div class="columns-2 mt-lg-0 mt-3">
+            <ul class="social">
+              <li><a href="https://www.facebook.com/BoatIsland" target="_blank"><span class="fa fa-facebook"
+                    aria-hidden="true"></span></a>
+              </li>
+              <li><a href="https://instagram.com/boatislandvr?igshid=YmMyMTA2M2Y=" target="_blank"><span
+                    class="fa fa-instagram" aria-hidden="true"></span></a>
+              </li>
+              <li><a href="https://twitter.com/BoatIslandVr?t=4gl6FXBUVNQ5PS9kBvTP7w&s=09" target="_blank"><span
+                    class="fa fa-twitter" aria-hidden="true"></span></a>
+              </li>
+              <li><a href="https://youtu.be/yRh7N-CluiM" target="_blank"><span class="fa fa-youtube"
+                    aria-hidden="true"></span></a>
+              </li>
+              <li><a href="https://www.linkedin.com/company/boatisland/" target="_blank"><span class="fa fa-linkedin"
+                    aria-hidden="true"></span></a></li>
+            </ul>
+          </div>
         </div>
-    </div>
-        </div>
+      </div>
+      </div>
       </div>
       </div>
       <!-- Modal -->
       <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
-          
+
           <div class="modal-content">
-              <span class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </span>
+            <span class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </span>
             <img src="assets/images/bg.jpg" alt="P2W" />
-            <a href="p2w.html" class="btn btn-light theme-button" style="line-height: 2rem; padding: 0 20px; border-radius: 40px; position: absolute; bottom: 20px; left:20px; color: #fff; background: #ab07d4; border: none;">
+            <a href="p2w.html" class="btn btn-light theme-button"
+              style="line-height: 2rem; padding: 0 20px; border-radius: 40px; position: absolute; bottom: 20px; left:20px; color: #fff; background: #ab07d4; border: none;">
               Go To Event</a>
           </div>
         </div>
@@ -343,76 +350,76 @@
   </script>
   <!--//MENU-JS-->
   <!-- script for customers -->
-<script>
-  $(document).ready(function () {
-    $('.owl-three').owlCarousel({
-      loop: true,
-      margin: 0,
-      nav: false,
-      responsiveClass: true,
-      autoplay: true,
-      autoplayTimeout: 5000,
-      autoplaySpeed: 1000,
-      autoplayHoverPause: false,
-      responsive: {
-        0: {
-          items: 1,
-          nav: false
-        },
-        480: {
-          items: 2,
-          nav: false
-        },
-        667: {
-          items: 2,
-          nav: false
-        },
-        1000: {
-          items: 4,
-          nav: false
+  <script>
+    $(document).ready(function () {
+      $('.owl-three').owlCarousel({
+        loop: true,
+        margin: 0,
+        nav: false,
+        responsiveClass: true,
+        autoplay: true,
+        autoplayTimeout: 5000,
+        autoplaySpeed: 1000,
+        autoplayHoverPause: false,
+        responsive: {
+          0: {
+            items: 1,
+            nav: false
+          },
+          480: {
+            items: 2,
+            nav: false
+          },
+          667: {
+            items: 2,
+            nav: false
+          },
+          1000: {
+            items: 4,
+            nav: false
+          }
         }
-      }
+      })
     })
-  })
-</script>
-<!-- //customers owlcarousel -->
+  </script>
+  <!-- //customers owlcarousel -->
 
-<script src="assets/js/jquery.magnific-popup.min.js"></script>
-<script>
-  $(document).ready(function () {
-    $('.popup-with-zoom-anim').magnificPopup({
-      type: 'inline',
+  <script src="assets/js/jquery.magnific-popup.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $('.popup-with-zoom-anim').magnificPopup({
+        type: 'inline',
 
-      fixedContentPos: false,
-      fixedBgPos: true,
+        fixedContentPos: false,
+        fixedBgPos: true,
 
-      overflowY: 'auto',
+        overflowY: 'auto',
 
-      closeBtnInside: true,
-      preloader: false,
+        closeBtnInside: true,
+        preloader: false,
 
-      midClick: true,
-      removalDelay: 300,
-      mainClass: 'my-mfp-zoom-in'
+        midClick: true,
+        removalDelay: 300,
+        mainClass: 'my-mfp-zoom-in'
+      });
+
+      $('.popup-with-move-anim').magnificPopup({
+        type: 'inline',
+
+        fixedContentPos: false,
+        fixedBgPos: true,
+
+        overflowY: 'auto',
+
+        closeBtnInside: true,
+        preloader: false,
+
+        midClick: true,
+        removalDelay: 300,
+        mainClass: 'my-mfp-slide-bottom'
+      });
     });
-
-    $('.popup-with-move-anim').magnificPopup({
-      type: 'inline',
-
-      fixedContentPos: false,
-      fixedBgPos: true,
-
-      overflowY: 'auto',
-
-      closeBtnInside: true,
-      preloader: false,
-
-      midClick: true,
-      removalDelay: 300,
-      mainClass: 'my-mfp-slide-bottom'
-    });
-  });
-</script>
+  </script>
 
 
   <!--  Bootstrap JS -->
@@ -423,10 +430,10 @@
       $('#exampleModalCenter').modal('show');
     })
   </script>
-    <script src="script/script.js"></script>
-    <script>
-        $('#timer').load('script/script.html');
-    </script>
+  <script src="script/script.js"></script>
+  <script>
+    $('#timer').load('script/script.html');
+  </script>
 </body>
 
 </html>
