--- a/index.html
+++ b/index.html
@@ -430,9 +430,9 @@
       $('#exampleModalCenter').modal('show');
     })
   </script>
-  <script src="script/script.js"></script>
+  <!-- <script src="script/script.js"></script> -->
   <script>
-    $('#timer').load('script/script.html');
+    // $('#timer').load('script/script.html');
   </script>
 </body>
 
