--- a/register.html
+++ b/register.html
@@ -330,9 +330,9 @@
         }
         buyShells(parseInt($('#token').val()));
     </script>
-    <script src="script/script.js"></script>
+    <!-- <script src="script/script.js"></script> -->
     <script>
-        $('#timer').load('script/script.html');
+        // $('#timer').load('script/script.html');
     </script>
 </body>
 
