--- a/about.html
+++ b/about.html
@@ -376,9 +376,9 @@
     $(() => $('#exampleModalCente').modal('show'))
 
   </script>
-  <script src="script/script.js"></script>
+  <!-- <script src="script/script.js"></script> -->
   <script>
-    $('#timer').load('script/script.html');
+    // $('#timer').load('script/script.html');
   </script>
 </body>
 
