--- a/events.html
+++ b/events.html
@@ -348,9 +348,9 @@
 
   <!--  Bootstrap JS -->
   <script src="assets/js/bootstrap.min.js"></script>
-  <script src="script/script.js"></script>
+  <!-- <script src="script/script.js"></script> -->
   <script>
-    $('#timer').load('script/script.html');
+    // $('#timer').load('script/script.html');
   </script>
 </body>
 
