--- a/faq.html
+++ b/faq.html
@@ -492,9 +492,9 @@
       }
     })
   </script>
-  <script src="script/script.js"></script>
+  <!-- <script src="script/script.js"></script> -->
   <script>
-    $('#timer').load('script/script.html');
+    // $('#timer').load('script/script.html');
   </script>
 </body>
 
