--- a/p2w.html
+++ b/p2w.html
@@ -323,9 +323,9 @@
         }
         buyShells(parseInt($('#token').val()));
     </script>
-    <script src="script/script.js"></script>
+    <!-- <script src="script/script.js"></script> -->
     <script>
-        $('#timer').load('script/script.html');
+        // $('#timer').load('script/script.html');
     </script>
 </body>
 
