--- a/success.html
+++ b/success.html
@@ -257,9 +257,9 @@
     <!--  Bootstrap JS -->
     <script src="assets/js/bootstrap.min.js"></script>
 
-    <script src="script/script.js"></script>
+    <!-- <script src="script/script.js"></script> -->
     <script>
-        $('#timer').load('script/script.html');
+        // $('#timer').load('script/script.html');
     </script>
 </body>
 
