--- a/terms.html
+++ b/terms.html
@@ -586,7 +586,7 @@
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="script/script.js"></script>
     <script>
-        $('#timer').load('script/script.html');
+        // $('#timer').load('script/script.html');
     </script>
 </body>
 
